add film titles

--- a/starwars/index.html
+++ b/starwars/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>Star War Films</h1>
+    <ol>
+        <li id='film1'></li>
+    </ol>
     <script src="starwars.js" type="module"></script>
 </body>
 
