--- a/starwars/index.html
+++ b/starwars/index.html
@@ -12,6 +12,12 @@
     <h1>Star War Films</h1>
     <ol>
         <li id='film1'></li>
+        <li id='film2'></li>
+        <li id='film3'></li>
+        <li id='film4'></li>
+        <li id='film5'></li>
+        <li id='film6'></li>
+        <li id='film7'></li>
     </ol>
     <script src="starwars.js" type="module"></script>
 </body>
