update h1 to header

--- a/starwars/index.html
+++ b/starwars/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Star War Films</h1>
+    <header>Star War Films</header>
     <ol>
         <li id='film1'></li>
         <li id='film2'></li>
