update to film coding

--- a/starwars/index.html
+++ b/starwars/index.html
@@ -10,14 +10,7 @@
 
 <body>
     <header>Star War Films</header>
-    <ol>
-        <li id='film1'></li>
-        <li id='film2'></li>
-        <li id='film3'></li>
-        <li id='film4'></li>
-        <li id='film5'></li>
-        <li id='film6'></li>
-        <li id='film7'></li>
+    <ol id='filmList'>
     </ol>
     <script src="starwars.js" type="module"></script>
 </body>
