add poster fig add pics

--- a/starwars/index.html
+++ b/starwars/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>Star War Films</header>
-    <ol id='filmList'>
-    </ol>
+    <main id='filmList'>
+    </main>
     <script src="starwars.js" type="module"></script>
 </body>
 
