update file names

--- a/films/index.html
+++ b/films/index.html
@@ -13,7 +13,7 @@
     <header>Star War Films</header>
     <main id='filmList'>
     </main>
-    <script src="starwars.js" type="module"></script>
+    <script src="sw-films.js" type="module"></script>
 </body>
 
 </html>
