--- a/characters/index.html
+++ b/characters/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Star Wars Characters</h1>
+    <main id="main"></main>
     <script src="main.js" type="module"></script>
 
 </body>
