--- a/characters/index.html
+++ b/characters/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <main id="main"></main>
+    <h1>Star Wars Characters</h1>
     <script src="main.js" type="module"></script>
 
 </body>
