--- a/starships/index.html
+++ b/starships/index.html
@@ -5,11 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Star Wars Starships</title>
+    <link href="style.css" rel="stylesheet" />
+    <title>Starships of Star Wars</title>
 </head>
 
 <body>
-    <h1>Star Wars Starships</h1>
+    <header>
+        <h1>Star Wars Starships</h1>
+    </header>
+    <main>
+        <nav>
+
+        </nav>
+        <div></div>
+    </main>
+    <footer>
+        <p>©Kiki Summers Designs 2021</p>
+    </footer>
+    <script src="starships.js" type="module"></script>
 </body>
 
 </html>
