--- a/starships/index.html
+++ b/starships/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <nav>
-
+            <ul class="navList"></ul>
         </nav>
         <div></div>
     </main>
