adding style to design;

--- a/starships/index.html
+++ b/starships/index.html
@@ -15,12 +15,12 @@
     </header>
     <main>
         <nav>
-            <ul class="navList"></ul>
+            <ul class="navList">
         </nav>
-        <div></div>
+        <div class="shipView"></div>
     </main>
     <footer>
-        <p>©Kiki Summers Designs 2021</p>
+        <p>&copy; Kiki Summers Designs 2021</p>
     </footer>
     <script src="starships.js" type="module"></script>
 </body>
