updated pictures; took stars of pictures;

--- a/index.html
+++ b/index.html
@@ -34,48 +34,32 @@
     </section>
 
     <section id="projects">
-        <a href="#" class="project-tile">
+        <a href="/films/" class="project-tile">
             <figure>
-                <img src="images/flower.jpg" />
+                <img src="images/star-wars-episode-7-image.jpeg" />
                 <figcaption>
-                    <span>&ltdot; </span>Sample Caption<span> &gtdot; </span>
+                    <span>&ltdot; </span>Star Wars Films<span> &gtdot; </span>
                 </figcaption>
             </figure>
         </a>
-        <a href="#" class="project-tile">
+        <a href="/characters/" class="project-tile">
             <figure>
-                <img src="images/flower.jpg" />
+                <img src="images/19372979-standard.jpeg" />
                 <figcaption>
-                    <span>&ltdot; </span>Sample Caption<span> &gtdot; </span>
-                </figcaption>
-            </figure>
-        </a>
-
-        <a href="#" class="project-tile">
-            <figure>
-                <img src="images/flower.jpg" />
-                <figcaption>
-                    <span>&ltdot; </span>Sample Caption<span> &gtdot; </span>
-                </figcaption>
-            </figure>
-        </a>
-        <a href="#" class="project-tile">
-            <figure>
-                <img src="images/flower.jpg" />
-                <figcaption>
-                    <span>&ltdot; </span>Sample Caption<span> &gtdot; </span>
+                    <span>&ltdot; </span>Star Wars Characters<span> &gtdot; </span>
                 </figcaption>
             </figure>
         </a>
 
-        <a href="#" class="project-tile">
+        <a href="/starships/" class="project-tile">
             <figure>
-                <img src="images/flower.jpg" />
+                <img src="images/x-wing.jpeg" />
                 <figcaption>
-                    <span>&ltdot; </span>Sample Caption<span> &gtdot; </span>
+                    <span>&ltdot; </span>Star Wars Starships<span> &gtdot; </span>
                 </figcaption>
             </figure>
         </a>
+
     </section>
     <section id="contact">
         <div>
