--- a/starships/index.html
+++ b/starships/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link href="style.css" rel="stylesheet" />
     <title>Starships of Star Wars</title>
 </head>
@@ -19,6 +20,13 @@
         </nav>
         <div class="shipView"></div>
     </main>
+    <div class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-content">
+            <h1 class="box">This image is not currently available</h1>
+        </div>
+        <button class="modal-close is-large" aria-label="close"></button>
+    </div>
     <footer>
         <p>&copy; Kiki Summers Designs 2021</p>
     </footer>
