--- a/index.html
+++ b/index.html
@@ -2,35 +2,100 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+    <link href="https://fonts.google.com/specimen/Roboto?preview.text_type=custom" rel="stylesheet" />
+    <link href="https://fonts.google.com/specimen/Indie+Flower?preview.text_type=custom" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
-    <title>Starships of Star Wars</title>
+
+    <title>Personal Portfolio</title>
 </head>
 
 <body>
-    <header>
-        <h1>Star Wars Starships</h1>
-    </header>
-    <main>
-        <nav>
-            <ul class="navList">
-        </nav>
-        <div class="shipView"></div>
-    </main>
-    <div class="modal">
-        <div class="modal-background"></div>
-        <div class="modal-content">
-            <h1 class="box">This image is not currently available</h1>
+    <nav id="navbar">
+        <ul class="navlist">
+            <li>
+                <a href="#welcome-section">About</a>
+            </li>
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
+
+    <section id="welcome-section">
+        <h1>My name is Kiki</h1>
+        <p>Welcome to My Page!</p>
+    </section>
+
+    <section id="projects">
+        <a href="#" class="project-tile">
+            <figure>
+                <img src="images/flower.jpg" />
+                <figcaption><span>&ltdot; </span>Sample Caption<span> &gtdot; </span></figcaption>
+            </figure>
+        </a>
+        <a href="#" class="project-tile">
+            <figure>
+                <img src="images/flower.jpg" />
+                <figcaption><span>&ltdot; </span>Sample Caption<span> &gtdot; </span></figcaption>
+            </figure>
+        </a>
+
+        <a href="#" class="project-tile">
+            <figure>
+                <img src="images/flower.jpg" />
+                <figcaption><span>&ltdot; </span>Sample Caption<span> &gtdot; </span></figcaption>
+            </figure>
+        </a>
+        <a href="#" class="project-tile">
+            <figure>
+                <img src="images/flower.jpg" />
+                <figcaption><span>&ltdot; </span>Sample Caption<span> &gtdot; </span></figcaption>
+            </figure>
+        </a>
+
+        <a href="#" class="project-tile">
+            <figure>
+                <img src="images/flower.jpg" />
+                <figcaption><span>&ltdot; </span>Sample Caption<span> &gtdot; </span></figcaption>
+            </figure>
+        </a>
+    </section>
+    <section id="contact">
+        <div>
+            <h1>Let's Work Together...</h1>
+            <p>other text here</p>
         </div>
-        <button class="modal-close is-large" aria-label="close"></button>
-    </div>
+        <div class="contact-links">
+            <a id="profile-link" href="https://github.com/ksummers1" target="_blank">
+                <i class="fab fa-github"></i>GitHub
+            </a>
+            <a id="profile-link" href="https://github.com/ksummers1" target="_blank">
+                <i class="fab fa-facebook-square"></i> Facebook
+            </a>
+            <a id="profile-link" href="#" target="_blank">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
+            <a id="profile-link" href="#" target="_blank">
+                <i class="fas fa-envelope-open-text"></i> Email
+            </a>
+            <a id="profile-link" href="#" target="_blank">
+                <i class="fas fa-mobile-alt"></i> Call
+            </a>
+        </div>
+    </section>
+
     <footer>
-        <p>&copy; Kiki Summers Designs 2021</p>
+
+        <p>&copy; Kiki Summers for DGM 1600</p>
     </footer>
-    <script src="starships.js" type="module"></script>
+
 </body>
 
 </html>
