updates to coding

--- a/films/index.html
+++ b/films/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Star War Films</h1>
+    <h1>Star Wars Films</h1>
     <main id='filmList'>
     </main>
     <script src="sw-films.js" type="module"></script>
