--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
     </section>
 
     <section id="projects">
-        <a href="#" class="project-tile">
+        <a href="films/index.html" class="films">
             <figure>
-                <img src="images/flower.jpg" />
-                <figcaption><span>&ltdot; </span>Sample Caption<span> &gtdot; </span></figcaption>
+                <img src="images/starwars_360_360_90 copy.jpg" />
+                <figcaption><span>&ltdot; </span>Star Wars Films<span> &gtdot; </span></figcaption>
             </figure>
         </a>
-        <a href="#" class="project-tile">
+        <a href="characters/index.html" class="characters">
             <figure>
-                <img src="images/flower.jpg" />
-                <figcaption><span>&ltdot; </span>Sample Caption<span> &gtdot; </span></figcaption>
+                <img src="images/19372979-standard.jpeg" />
+                <figcaption><span>&ltdot; </span>Star Wars Characters<span> &gtdot; </span></figcaption>
             </figure>
         </a>
 
-        <a href="#" class="project-tile">
+        <a href="starships/index.html" class="ships">
             <figure>
-                <img src="images/flower.jpg" />
-                <figcaption><span>&ltdot; </span>Sample Caption<span> &gtdot; </span></figcaption>
+                <img src="images/x-wing.jpeg" />
+                <figcaption><span>&ltdot; </span>Star Wars Ships<span> &gtdot; </span></figcaption>
             </figure>
         </a>
         <a href="#" class="project-tile">
