--- a/congress/index.html
+++ b/congress/index.html
@@ -11,6 +11,13 @@
 
 <body>
     <h1>People in Congress</h1>
+    <div id="buttonHeader">
+        <button id="seniorityButton">Sort by Seniority</button>
+        <button id="birthdayButton">Sort by Birthday</button>
+    </div>
+    </header>
+    </main>
+    <div class="congressGrid"></div>
     <script src="congress.js" type="module"></script>
 
 </body>
