updates to congress pages; adding pictures

--- a/congress/index.html
+++ b/congress/index.html
@@ -2,24 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <title>The People in Congress</title>
 </head>
 
 <body>
-    <h1>People in Congress</h1>
-    <div id="buttonHeader">
-        <button id="seniorityButton">Sort by Seniority</button>
-        <button id="birthdayButton">Sort by Birthday</button>
-    </div>
+    <header>
+        <h1>People in Congress</h1>
+        <div id="buttonHeader">
+            <button id="seniorityButton">Sort by Seniority</button>
+            <button id="birthdayButton">Sort by Birthday</button>
+        </div>
     </header>
+    <main>
+        <div class="congressGrid"></div>
     </main>
-    <div class="congressGrid"></div>
     <script src="congress.js" type="module"></script>
-
 </body>
 
 </html>
