added congress picture to portfolio

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <figcaption><span>&ltdot; </span>Star Wars Ships<span> &gtdot; </span></figcaption>
             </figure>
         </a>
-        <a href="#" class="project-tile">
+        <a href="congress/index.html" class="congress">
             <figure>
-                <img src="images/flower.jpg" />
-                <figcaption><span>&ltdot; </span>Sample Caption<span> &gtdot; </span></figcaption>
+                <img src="images/congress.jpeg" />
+                <figcaption><span>&ltdot; </span>Members of Congress<span> &gtdot; </span></figcaption>
             </figure>
         </a>
 
