updates to main index and css; updates to pokemon

--- a/congress/index.html
+++ b/congress/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" />
-    <title>The People in Congress</title>
-</head>
+<body background="congresspic.jpeg">
 
-<body>
-    <header>
-        <h1>People in Congress</h1>
-        <div id="buttonHeader">
-            <button id="seniorityButton">Sort by Seniority</button>
-            <button id="birthdayButton">Sort by Birthday</button>
-        </div>
-    </header>
-    <main>
-        <div class="congressGrid"></div>
-    </main>
-    <script src="congress.js" type="module"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="style.css" rel="stylesheet" />
+        <title>The People in Congress</title>
+
+    </head>
+
+    <body>
+        <header>
+            <h1>People in Congress</h1>
+            <div id="buttonHeader">
+                <button id="seniorityButton">Sort by Seniority</button>
+                <button id="birthdayButton">Sort by Birthday</button>
+            </div>
+        </header>
+        <main>
+            <div class="congressGrid"></div>
+        </main>
+        <script src="congress.js" type="module"></script>
+    </body>
 
 </html>
