--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -34,36 +35,56 @@
     </section>
 
     <section id="projects">
-        <a href="films/index.html" class="films">
+        <a href="films/index.html">
             <figure>
-                <img src="images/starwars_360_360_90 copy.jpg" />
-                <figcaption><span>&ltdot; </span>Star Wars Films<span> &gtdot; </span></figcaption>
+                <div class="container">
+                    <img src="images/starwars_360_360_90 copy.jpg" alt="films" class="films">
+                    <div class="overlay">
+                        <div class="text">Star Wars Films</div>
+                    </div>
+                </div>
             </figure>
         </a>
-        <a href="characters/index.html" class="characters">
+        <a href="characters/index.html">
             <figure>
-                <img src="images/19372979-standard.jpeg" />
-                <figcaption><span>&ltdot; </span>Star Wars Characters<span> &gtdot; </span></figcaption>
-            </figure>
-        </a>
-
-        <a href="starships/index.html" class="ships">
-            <figure>
-                <img src="images/x-wing.jpeg" />
-                <figcaption><span>&ltdot; </span>Star Wars Ships<span> &gtdot; </span></figcaption>
-            </figure>
-        </a>
-        <a href="congress/index.html" class="congress">
-            <figure>
-                <img src="images/congress.jpeg" />
-                <figcaption><span>&ltdot; </span>Members of Congress<span> &gtdot; </span></figcaption>
+                <div class="container">
+                    <img src="images/19372979-standard.jpeg" alt="characters" class="characters">
+                    <div class="overlay">
+                        <div class="text">Star Wars Characters</div>
+                    </div>
+                </div>
             </figure>
         </a>
 
-        <a href="#" class="project-tile">
+        <a href="starships/index.html">
             <figure>
-                <img src="images/flower.jpg" />
-                <figcaption><span>&ltdot; </span>Sample Caption<span> &gtdot; </span></figcaption>
+                <div class="container">
+                    <img src="images/x-wing.jpeg" alt="ships" class="ships">
+                    <div class="overlay">
+                        <div class="text">Star Wars Ships</div>
+                    </div>
+                </div>
+            </figure>
+        </a>
+        <a href="congress/index.html">
+            <figure>
+                <div class="container">
+                    <img src="images/congress.jpeg" alt="congress" class="congress">
+                    <div class="overlay">
+                        <div class="text">Congress Members</div>
+                    </div>
+                </div>
+            </figure>
+        </a>
+
+        <a href="pokemon/index.html">
+            <figure>
+                <div class="container">
+                    <img src="images/poketitle.jpeg" alt="pokemon" class="pokemon">
+                    <div class="overlay">
+                        <div class="text">Pokemon Characters</div>
+                    </div>
+                </div>
             </figure>
         </a>
     </section>
