updates to main html and css; add and delete pics; pokemon updates

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -9,7 +9,7 @@
     <title>Pokemon</title>
 </head>
 
-<body>
+<body background="images/pokeball.jpeg">
     <header>
         <h1>Pokemon: Catch 'em if you Can!</h1>
         <button class="loadPokemon">Load Pokemon</button>
