--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
     <link href="https://fonts.google.com/specimen/Roboto?preview.text_type=custom" rel="stylesheet" />
     <link href="https://fonts.google.com/specimen/Indie+Flower?preview.text_type=custom" rel="stylesheet" />
@@ -38,17 +38,18 @@
         <a href="films/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/starwars_360_360_90 copy.jpg" alt="films" class="films">
+                    <img src="images/starwarslogogreen-228356.jpeg">
                     <div class="overlay">
                         <div class="text">Star Wars Films</div>
                     </div>
                 </div>
+
             </figure>
         </a>
         <a href="characters/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/19372979-standard.jpeg" alt="characters" class="characters">
+                    <img src="images/starwars.jpg">
                     <div class="overlay">
                         <div class="text">Star Wars Characters</div>
                     </div>
@@ -59,9 +60,9 @@
         <a href="starships/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/x-wing.jpeg" alt="ships" class="ships">
+                    <img src="images/x-wing.jpeg">
                     <div class="overlay">
-                        <div class="text">Star Wars Ships</div>
+                        <div class="text">Star Wars Starships</div>
                     </div>
                 </div>
             </figure>
@@ -69,9 +70,9 @@
         <a href="congress/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/congress.jpeg" alt="congress" class="congress">
+                    <img src="images/accountability-in-congress_header.jpeg">
                     <div class="overlay">
-                        <div class="text">Congress Members</div>
+                        <div class="text">Members of Congress</div>
                     </div>
                 </div>
             </figure>
@@ -80,7 +81,7 @@
         <a href="pokemon/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/poketitle.jpeg" alt="pokemon" class="pokemon">
+                    <img src="images/pokemon logo.jpeg">
                     <div class="overlay">
                         <div class="text">Pokemon Characters</div>
                     </div>
