--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -13,10 +13,23 @@
     <header>
         <h1>Pokemon: Catch 'em if you Can!</h1>
         <button class="loadPokemon">Load Pokemon</button>
+        <button class="fetchSelectedPokemon">Fetch Pokemon</button>
     </header>
     <main>
         <div class="pokeGrid"></div>
     </main>
+    <div class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-content">
+            <div class="field">
+                <label class="label">Enter the ID of the Pokemon you want to fetch here!</label>
+                <div class="control">
+                    <input class="input" type="text" placeholder="Text input">
+                </div>
+            </div>
+        </div>
+        <button class="modal-close is-large" aria-label="close"></button>
+    </div>
     <script src="pokemoncode.js" type="module"></script>
 </body>
 
