--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link href="style.css" rel="stylesheet" />
     <title>Pokemon</title>
 </head>
@@ -12,8 +13,8 @@
 <body background="images/pokeball.jpeg">
     <header>
         <h1>Pokemon: Catch 'em if you Can!</h1>
-        <button class="loadPokemon">Load Pokemon</button>
-        <button class="fetchSelectedPokemon">Fetch Pokemon</button>
+        <button id="loadPokemon" class="button is-primary">Load Pokemon</button>
+        <button id="fetchSelectedPokemon" class="button is-primary">Fetch Pokemon</button>
     </header>
     <main>
         <div class="pokeGrid"></div>
@@ -21,12 +22,17 @@
     <div class="modal">
         <div class="modal-background"></div>
         <div class="modal-content">
-            <div class="field">
-                <label class="label">Enter the ID of the Pokemon you want to fetch here!</label>
-                <div class="control">
-                    <input class="input" type="text" placeholder="Text input">
+            <form class="box">
+                <div class="field">
+                    <label class="label">Enter the ID number of the Pokemon you want to fetch!</label>
+                    <div class="control">
+                        <input class="input" type="number" placeholder="e.g. 1 for Bulbasaur"></input>
+                    </div>
                 </div>
-            </div>
+
+
+                <button id="submitButton" class="button is-primary">Submit</button>
+            </form>
         </div>
         <button class="modal-close is-large" aria-label="close"></button>
     </div>
