update clickable buttons pokemon

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Pokemon: Catch 'em if you Can!</h1>
         <button id="loadPokemon" class="button is-primary">Load Pokemon</button>
-        <button id="fetchSelectedPokemon" class="button is-primary">Fetch Pokemon</button>
+        <button id="fetchPokemon" class="button is-primary">Fetch Pokemon</button>
     </header>
     <main>
         <div class="pokeGrid"></div>
@@ -29,7 +29,6 @@
                         <input class="input" type="number" placeholder="e.g. 1 for Bulbasaur"></input>
                     </div>
                 </div>
-
 
                 <button id="submitButton" class="button is-primary">Submit</button>
             </form>
