update to fetch button

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -12,7 +12,7 @@
 
 <body background="images/pokeball.jpeg">
     <header>
-        <h1>Pokemon: Catch 'em if you Can!</h1>
+        <h1>Pokemon! Catch 'em if you Can!</h1>
         <button id="loadPokemon" class="button is-primary">Load Pokemon</button>
         <button id="fetchPokemon" class="button is-primary">Fetch Pokemon</button>
     </header>
