updates to pokemo

--- a/congress/index.html
+++ b/congress/index.html
@@ -18,6 +18,9 @@
             <div id="buttonHeader">
                 <button id="seniorityButton">Sort by Inferiority</button>
                 <button id="birthdayButton">Sort by Birthday</button>
+                <button id="missedVotes">Highest Missed Votes</button>
+                <button id="partyHack">Highest Votes with Party</button>
+
             </div>
         </header>
         <main>
