--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+
     <link href="style.css" rel="stylesheet" />
     <title>Pokemon</title>
 </head>
@@ -19,7 +20,7 @@
     <main>
         <div class="pokeGrid"></div>
     </main>
-    <div class="modal">
+    <!-- <div class="modal">
         <div class="modal-background"></div>
         <div class="modal-content">
             <form class="box">
@@ -34,7 +35,7 @@
             </form>
         </div>
         <button class="modal-close is-large" aria-label="close"></button>
-    </div>
+    </div> -->
     <script src="pokemoncode.js" type="module"></script>
 </body>
 
