--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">-->
 
     <link href="style.css" rel="stylesheet" />
     <title>Pokemon</title>
@@ -16,6 +16,7 @@
         <h1>Pokemon! Catch 'em if you Can!</h1>
         <button id="loadPokemon" class="button is-primary">Load Pokemon</button>
         <button id="fetchPokemon" class="button is-primary">Fetch Pokemon</button>
+        <button id="newPokemon" class="button is-warning">New Pokemon</button>
     </header>
     <main>
         <div class="pokeGrid"></div>
