--- a/congress/index.html
+++ b/congress/index.html
@@ -16,7 +16,7 @@
         <header>
             <h1>People in Congress</h1>
             <div id="buttonHeader">
-                <button id="seniorityButton">Sort by Inferiority</button>
+                <button id="seniorityButton">Sort by Seniority</button>
                 <button id="birthdayButton">Sort by Birthday</button>
                 <button id="missedVotes">Highest Missed Votes</button>
                 <button id="partyHack">Highest Votes with Party</button>
