--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         <a href="pokemon/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/pokemon logo.jpeg">
+                    <img src="images/pokemonbackground.jpeg">
                     <div class="overlay">
-                        <div class="text">Pokemon Characters</div>
+                        <div class="text">Pokemon Digital Trade Cards</div>
                     </div>
                 </div>
             </figure>
