update starwars images and buttons; update js&css

--- a/characters/index.html
+++ b/characters/index.html
@@ -9,10 +9,20 @@
     <title>Star Wars Characters</title>
 </head>
 
-<body>
+<body background="wallpaper.jpeg">
 
-    <h1>Star Wars Characters</h1>
-    <main id="main"></main>
+    <header>
+        <h1>Star Wars Characters</h1>
+        <button id="maleButton" class="button is-primary">Male Characters</button>
+        <button id="femaleButton" class="button is-primary">Female Characters</button>
+        <button id="otherButton" class="button is-warning">Other Characters</button>
+
+    </header>
+
+
+    <main id="main">
+        <div id="starGrid"></div>
+    </main>
 
     <script src="main.js" type="module"></script>
 
