update js and css update images and buttons

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="films/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/starwarslogogreen-228356.jpeg">
+                    <img src="images/starwarsmovies.jpeg">
                     <div class="overlay">
                         <div class="text">Star Wars Films</div>
                     </div>
@@ -49,7 +49,7 @@
         <a href="characters/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/starwars.jpg">
+                    <img src="images/starwarsbackground.jpeg">
                     <div class="overlay">
                         <div class="text">Star Wars Characters</div>
                     </div>
