--- a/index.html
+++ b/index.html
@@ -30,15 +30,18 @@
     </nav>
 
     <section id="welcome-section">
+
         <h1>My name is Kiki</h1>
+        <img src="images/IMG_5622.JPG" class="myPic">
         <p>Welcome to My Page!</p>
+
     </section>
 
     <section id="projects">
         <a href="films/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/starwarsmovies.jpeg">
+                    <img src="images/starwarsmovies.jpeg" class="projectButton">
                     <div class="overlay">
                         <div class="text">Star Wars Films</div>
                     </div>
@@ -49,7 +52,7 @@
         <a href="characters/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/starwarsbackground.jpeg">
+                    <img src="images/starwarsbackground.jpeg" class="projectButton">
                     <div class="overlay">
                         <div class="text">Star Wars Characters</div>
                     </div>
@@ -60,7 +63,7 @@
         <a href="starships/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/x-wing.jpeg">
+                    <img src="images/x-wing.jpeg" class="projectButton">
                     <div class="overlay">
                         <div class="text">Star Wars Starships</div>
                     </div>
@@ -70,7 +73,7 @@
         <a href="congress/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/accountability-in-congress_header.jpeg">
+                    <img src="images/accountability-in-congress_header.jpeg" class="projectButton">
                     <div class="overlay">
                         <div class="text">Members of Congress</div>
                     </div>
@@ -81,7 +84,7 @@
         <a href="pokemon/index.html">
             <figure>
                 <div class="container">
-                    <img src="images/pokemonbackground.jpeg">
+                    <img src="images/pokemonbackground.jpeg" class="projectButton">
                     <div class="overlay">
                         <div class="text">Pokemon Digital Trade Cards</div>
                     </div>
@@ -92,7 +95,8 @@
     <section id="contact">
         <div>
             <h1>Let's Work Together...</h1>
-            <p>other text here</p>
+            <p>"Design is intelligence made visible." Alina Wheeler
+            </p>
         </div>
         <div class="contact-links">
             <a id="profile-link" href="https://github.com/ksummers1" target="_blank">
